# macroscale-flux

./: .gitignore  Cargo.toml  docker-compose.yaml  readme.md  tooling.md
captureInterface/: .gitignore  CMakeLists.txt  build.sh  captureInterface.manifest  captureInterface.rc
captureInterface/include/: application_data.h  capturer.h  event_data.h  event_loop.h  task_handler.h  tasks.h  utils.h
captureInterface/src/: main.cpp  utils.cpp
captureInterface/src/core/: application_data.cpp  capturer.cpp  event_loop.cpp  task_handler.cpp
captureInterface/src/tasks/: log_fgwin.cpp  poll_fgwin.cpp  poll_gamewin.cpp  poll_hotkeys.cpp
client/: Cargo.toml
client/src/: client.rs  main.rs
client/src/base/: action.rs  event.rs  event_loop.rs  mod.rs  task.rs
client/src/core/: application.rs  mod.rs  task_handler.rs
client/src/processors/: action_processor.rs
client/src/tasks/: action_capture.rs  action_quit.rs  event_handler.rs  hotkey_handler.rs  mod.rs  poll_hotkeys.rs  register_hotkeys.rs
client_backend/: CMakeLists.txt  Cargo.toml  main.cpp  readme.md
client_backend/include/: config.h.in  event_data.h  event_loop.h  logger.h  task_handler.h  tasks.h
client_backend/libs/NvFBC/samples/: makefile
client_backend/libs/NvFBC/samples/NvFBCHwEncCaps/: NvFBCHwEncCaps.c  makefile
client_backend/libs/NvFBC/samples/NvFBCMultiThread/: makefile
client_backend/libs/NvFBC/samples/NvFBCToGL/: NvFBCToGL.c
client_backend/src/: event_loop.cpp  main.cpp  main.rs  utils.rs
client_backend/src/base/: app_data.rs  event.rs  event_loop.rs  mod.rs  task.rs
client_backend/src/core/: application.rs  capture_buffer.rs  capture_handler.rs  capturer.cpp  event_loop.cpp  mod.rs  task_handler.cpp  task_handler.rs
client_backend/src/processors/: action_processor.rs  hotkey_processor.rs  mod.rs
client_backend/src/tasks/: action_capture.rs  action_log_windows.rs  action_quit.rs  event_handler.rs  mod.rs  poll_foreground_window.rs  poll_game_window.rs  poll_hotkeys.cpp  poll_hotkeys.rs  register_hotkeys.cpp  register_hotkeys.rs  window_capturer.rs
client_backend/src/tasks/one_shot/: capture_gameplay.rs  check_graphics_capture_session.rs  check_win_version.rs  log_process_windows.rs  mod.rs  quit_application.rs  register_hotkeys.rs  save_session_to_video.rs  start_capture.rs  stop_capture.rs  window_capturer.rs
client_backend/src/tasks/pollers/: mod.rs  poll_capture_frames.rs  poll_events.rs  poll_foreground_window.rs  poll_game_window.rs  poll_hotkey.rs  readme.md
client_frontend/: readme.md
docker/: buildenv.Dockerfile  buildenv.sh  buildtools.Dockerfile  docker-init.sh
libs/mac_os/: Cargo.toml
libs/win_x86_64/: Cargo.toml
src/: main.rs
