[package]
name = "macroscale_game_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
tokio = { version = "1.43.0", features = ["full"] }
win_x86_64 = { path = "../libs/win_x86_64" }

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

