[package]
name = "macroscale_game_capture"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
win_x86_64 = { path = "../libs/win_x86_64" }

[dependencies.tokio]
version = "1.43.0"
features = [
    "macros",
    "sync",
    "time",
    "rt",
] 

[dependencies.windows]
version = "0.59.0"
features = [ 
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging"
]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"

