[package]
name = "client_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
env_logger = "0.11.6"
log = "0.4.25"
windows-core = "0.59.0"
windows-strings = "0.3.0"

[dependencies.tokio]
version = "1.43.0"
features = [
    "macros",
    "sync",
    "time",
    "rt",
] 

[dependencies.windows]
version = "0.59.0"
features = [ 
    "Win32_Foundation",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_WindowsAndMessaging",
    "Win32_System_Threading",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemInformation",
    "Win32_System_WinRT_Graphics_Capture",
    "Win32_System_WinRT_Direct3D11",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "UI",
    "Graphics_Capture",
    "Graphics_DirectX",
    "Graphics_DirectX_Direct3D11"
]

[target.x86_64-pc-windows-gnu]
linker = "x86_64-w64-mingw32-gcc"
